--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,15 @@ on:
       - main
 
 jobs:
+  login:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
   build:
     runs-on: ubuntu-latest
 
@@ -16,6 +25,5 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           docker build -t my-techdemo-app .
-          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker-compose up
           docker-compose push
