--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           docker build -t my-techdemo-app .
-          docker-compose up
+          docker-compose up -d
           docker-compose push
