--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,21 +9,22 @@ jobs:
   login:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Build and Push Docker Image
+      - name: Build Docker Image
         run: |
-          docker build -t my-techdemo-app .
-          docker-compose up -d
-          docker-compose push
+          docker build -t my-techdemo-app:${{ github.sha }} .
+
+      - name: Push Docker Image
+        run: |
+          docker push my-techdemo-app:${{ github.sha }}
