--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,10 @@ jobs:
         run: |
           docker build -t my-techdemo-app:${{ github.sha }} .
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Push Docker Image
+      - name: Tag Docker Image
         run: |
-          docker push my-techdemo-app:${{ github.sha }}
+          docker tag my-techdemo-app:${{ github.sha }} localhost:5000/my-techdemo-app:${{ github.sha }}
+
+      - name: Push Docker Image to Local Registry
+        run: |
+          docker push localhost:5000/my-techdemo-app:${{ github.sha }}
