--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
 
       - name: Deploy with Docker Compose
         run: |
-          docker-compose -f docker-compose.yml up -d
+          docker-compose -f /usr/src/app/docker-compose.yml up -d
