--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,32 +6,28 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
+    name: build && push image to docker hub
     runs-on: ubuntu-latest
     steps:
-      - name: Debugging
-        run: |
-          docker version
-          docker info
-          docker images
-
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker Image
-        run: |
-          docker build -t my-techdemo-app:${{ github.sha }} .
-
-      - name: Tag Docker Image
-        run: |
-          docker tag my-techdemo-app:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{ github.sha }}
-
-      - name: Push Docker Image to Docker Hub
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{ github.sha }}
-
-      - name: Start containers
-        run: docker-compose -f "docker-compose.yml" up -d --build
+      - name: docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: build and push api
+        id: build-push-api
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{ github.sha }}
+    
