--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,5 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
     
