--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PORT: 5432
   app:
     container_name: my-techdemo-app
-    image: elliw01/my-techdemo-app:latest
+    image: elliw01/my-techdemo-app:${DOCKER_IMAGE_TAG:-latest}
 
     ports:
       - 13000:3000
