--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set Docker Image Tag
-        id: set-docker-image-tag
-        run: echo "DOCKER_IMAGE_TAG=${{ github.run_number }}" >> $GITHUB_ENV
-        env:
-          DOCKER_IMAGE_TAG: ${{ github.run_number }}
-
       - name: setup docker buildx
         uses: docker/setup-buildx-action@v2
 
@@ -32,5 +26,5 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{ env.DOCKER_IMAGE_TAG }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
     
