--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,22 @@ services:
       POSTGRES_USER: user_db
       POSTGRES_DB: cats_db
       POSTGRES_PORT: 5432
+
   app:
     container_name: my-techdemo-app
     image: elliw01/my-techdemo-app:latest
-
     ports:
       - 13000:3000
+    environment:
+      NODE_ENV: development  # Set the environment to development
+
+  app-test:  # New testing service
+    container_name: my-techdemo-app-test
+    image: elliw01/my-techdemo-app:latest
+    environment:
+      NODE_ENV: test  # Set the environment to test
+    command: npm test  # Run tests when the container starts
+
   watchtower:
     container_name: watchtower
     image: containrrr/watchtower
