--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,6 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app
-          
       - name: build and push api
         id: build-push-api
         uses: docker/build-push-action@v3
@@ -32,6 +26,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels:  ${{ steps.meta.outputs.labels }}
-    
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{steps.date.outputs.date}}, ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
