--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{steps.date.outputs.date}}, ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:${{steps.date.outputs.date}}
