--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,15 +23,18 @@ jobs:
         run: |
           echo "BUILD_VERSION=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
 
-      - name: Docker meta
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app
-          
-      - name: Build and push
-        uses: docker/build-push-action@v5
+            
+      - name: build and push api
+        id: build-push-api
+        uses: docker/build-push-action@v3
         with:
-          context: 
+          context: .
+          file: Dockerfile
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          lables:  ${{ steps.meta.outputs.labels }}
