--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.js",
+    "test": "SET NODE_ENV=test && mocha test/**/*.js",
     "dev": "node server.js"
   },
   "keywords": [],
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^2.1.0",
-    "chai": "^5.0.0",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "chai": "^4.3.4",
+    "jest": "^29.7.0",
+    "mocha": "^9.0.0"
   }
 }
