--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    timeout-minutes: 10 
+
     services:
       postgres:
         image: postgres:latest
