--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test && mocha test/**/*.js",
+    "test": "NODE_ENV=test && mocha test/**/*.js --exit",
     "dev": "node server.js"
   },
   "keywords": [],
