--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,6 @@ jobs:
           POSTGRES_DB: test_cats_db
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout Repository
@@ -35,5 +34,5 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: CI=true npm test
+        run: npm test
 
