--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
           POSTGRES_DB: test_cats_db
         ports:
           - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout Repository
@@ -34,5 +35,9 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: npm test
-
+        run: |
+          if [ $? -ne 0 ]; then
+            git reset --hard HEAD@{1}
+            echo "Rolling back changes due to test failure"
+          fi
+          CI=true npm test
