--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,16 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: |
-          CI=true npm test
-          if [ $? -ne 0 ]; then
-            git reset --hard HEAD@{1}
-            echo "Rolling back changes due to test failure"
-          fi
+        id: test
+        run: CI=true npm test
+
+  rollback:
+    needs: test
+    if: ${{ needs.test.result != 'success' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Rollback Changes
+        run: git reset --hard HEAD@{1}
