--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,4 +57,5 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+           ${{ secrets.DOCKER_USERNAME }}/my-techdemo-app:latest
           labels:  ${{ steps.meta.outputs.labels }}
